# sphinx-multiproject

./: .gitignore  .readthedocs.yaml  MAINTAINERS.md  README.md  pytest.ini  setup.cfg  tox.ini
.circleci/: config.yml
docs/: advanced-usage.rst  conf.py  configuration.rst  development.rst  implementation.rst  index.rst  limitations.rst  quickstart.rst  requirements.txt
multiproject/: __init__.py  extension.py  utils.py
sharedconf/: __init__.py  extension.py  utils.py
tests/: conftest.py  test_extension.py  test_utils.py
tests/examples/basic/: conf.py
tests/examples/conditional/: conf.py
tests/examples/conditional/api/: index.rst
tests/examples/conditional/dev/: index.rst
tests/examples/conditional/user/: index.rst
tests/examples/multipleconfs/: conf.py
tests/examples/multipleconfs/api/: conf.py
tests/examples/multipleconfs/dev/: conf.py
tests/examples/multipleconfs/user/: conf.py
