[metadata]
name = sphinx-sharedconf
version = attr: sharedconf.__version__
author = Read the Docs, Inc
author_email = support@readthedocs.org
description = Build multiple Sphinx projects from a single repository on Read the Docs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://sphinx-sharedconf.readthedocs.io/
project_urls =
    Source = https://github.com/readthedocs/sphinx-sharedconf/
    Bug Tracker = https://github.com/readthedocs/sphinx-sharedconf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Sphinx
    Framework :: Sphinx :: Extension
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Documentation

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
include = sharedconf
