[metadata]
name = sphinx-multiproject
version = 1.0.0rc1
author = Read the Docs, Inc
author_email = support@readthedocs.org
description = Build multiple Sphinx projects from a single repository on Read the Docs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://sphinx-multiproject.readthedocs.io/
project_urls =
    Source = https://github.com/readthedocs/sphinx-multiproject/
    Bug Tracker = https://github.com/readthedocs/sphinx-multiproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Sphinx
    Framework :: Sphinx :: Extension
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Documentation

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
include = multiproject
